--- a/index.html
+++ b/index.html
@@ -858,6 +858,7 @@ Figure&nbsp;4: Conditional KDE for <span class="math inline">\(U[0,1]\)</span> w
 </div>
 </div></section><section id="example---conditional-kde-with-unbounded-y" class="slide level2 center"><h2>Example - Conditional KDE with Unbounded <span class="math inline">\(Y\)</span>
 </h2>
+<p>Below we consider the case where the distribution is unbounded (<span class="math inline">\(Y\in(-\infty,\infty)\)</span>) but empirical bounds are used and the bandwidths and polynomial order are data-driven</p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
@@ -904,6 +905,7 @@ Figure&nbsp;5: Conditional KDE for <span class="math inline">\(N(x,1)\)</span> w
 </div>
 </div></section><section id="example---conditional-kde-with-bounded-y" class="slide level2 center"><h2>Example - Conditional KDE with Bounded <span class="math inline">\(Y\)</span>
 </h2>
+<p>Below we consider the case where the distribution is bounded (<span class="math inline">\(Y\in[0,1]\)</span>) but empirical bounds are used and the bandwidths and polynomial order are data-driven</p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
@@ -945,6 +947,7 @@ Figure&nbsp;6: Conditional KDE for <span class="math inline">\(\textrm{Beta}(1+x
 </div>
 </div>
 </div></section><section id="example---simultaneous-confidence-intervals" class="slide level2 center"><h2>Example - Simultaneous Confidence Intervals</h2>
+<p>Simultaneous or “uniform” confidence intervals present a multiple comparison problem, requiring both bias adjustment and solving a problem known not to be easy. The R package you are using can generate pointwise, simultaneous, and Bonferroni bounds that are theoretically supported and trivial to render, as the following example highlights (this may take a bit of time as there are a large number of bootstrap replications being drawn, <span class="math inline">\(B=3,999\)</span>).</p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
@@ -983,6 +986,7 @@ Figure&nbsp;7: Conditional KDE for <span class="math inline">\(\textrm{Beta}(1+x
 </div>
 </div>
 </div></section><section id="example---patent-application-data" class="slide level2 center"><h2>Example - Patent Application Data</h2>
+<p>As a nod to being in the patent capital of the world, consider estimating the density of patent counts using a panel of 181 firms from 1983 to 1991 (again, this may take a bit of time)</p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
