--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ Qi Li<sup>3</sup>
     </div>
 </div>
 
-  <p class="date">Updated February 18, 2025</p>
+  <p class="date">Updated February 19, 2025</p>
 </section><section><section id="slide-pro-tips" class="title-slide slide level1 center"><h1>Slide Pro-Tips</h1>
 <div>
 <ul>
@@ -469,12 +469,12 @@ Qi Li<sup>3</sup>
 <ul>
 <li class="fragment"><p>This talk is about a proposed boundary adaptive, polynomial order adaptive, conditional kernel density estimator, and its finite-sample performance.</p></li>
 <li class="fragment"><p>I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating.</p></li>
-<li class="fragment"><p>Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn’t get the <a href="https://jeffreyracine.github.io/bk/prelim.html">memo</a>).</p></li>
+<li class="fragment"><p>Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn’t get the <a href="https://JeffreyRacine.github.io/bk/prelim.html">memo</a>).</p></li>
 <li class="fragment"><p>If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds.</p></li>
 <li class="fragment"><p>My hope is that you will follow along and reproduce the results on your own computer.</p></li>
 <li class="fragment">
 <p>Let’s begin by opening the following link in Firefox:</p>
-<p><a href="https://jeffreyracine.github.io/bk" class="uri">https://jeffreyracine.github.io/bk</a></p>
+<p><a href="https://JeffreyRacine.github.io/bk">JeffreyRacine.github.io/bk</a></p>
 </li>
 </ul></section><section id="overview-of-talk-1" class="slide level2 center"><h2>Overview of Talk</h2>
 <ul>
@@ -491,7 +491,7 @@ Qi Li<sup>3</sup>
 </li>
 <li class="fragment">
 <p>An R package is available at:</p>
-<p><a href="https://github.com/JeffreyRacine/bkcde" class="uri">https://github.com/JeffreyRacine/bkcde</a></p>
+<p><a href="https://github.com/JeffreyRacine/bkcde">github.com/JeffreyRacine/bkcde</a></p>
 </li>
 </ul></section></section><section><section id="unconditional-density-estimation-with-bounded-data" class="title-slide slide level1 center"><h1>Unconditional Density Estimation with Bounded Data</h1>
 
@@ -2790,7 +2790,7 @@ Table&nbsp;24: Median Relative RMSE Quadratic LS
 </ul></section><section id="references-scrollable" class="slide level2 allowframebreaks smaller scrollable"><h2>References (scrollable)</h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p>Boundary Corrected Adaptive CKDE | <a href="https://jeffreyracine.github.io/bk" class="uri">https://jeffreyracine.github.io/bk</a></p>
+<p>Boundary Corrected Adaptive CKDE | <a href="https://JeffreyRacine.github.io/bk">JeffreyRacine.github.io/bk</a></p>
 </div>
 </div>
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
