--- a/index.html
+++ b/index.html
@@ -467,11 +467,11 @@ Qi Li<sup>3</sup>
 </div>
 </section><section id="overview-of-talk" class="slide level2 center"><h2>Overview of Talk</h2>
 <ul>
-<li class="fragment"><p>This talk is about a proposed boundary adaptive, polynomial order adaptive, conditional kernel density estimator, and its finite-sample performance.</p></li>
-<li class="fragment"><p>I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating.</p></li>
+<li class="fragment"><p>This talk is about a proposed boundary adaptive, polynomial order adaptive, conditional kernel density estimator, and its finite-sample performance</p></li>
+<li class="fragment"><p>I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating</p></li>
 <li class="fragment"><p>Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn’t get the <a href="https://JeffreyRacine.github.io/bk/prelim.html">memo</a>).</p></li>
-<li class="fragment"><p>If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds.</p></li>
-<li class="fragment"><p>My hope is that you will follow along and reproduce the results on your own computer.</p></li>
+<li class="fragment"><p>If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds</p></li>
+<li class="fragment"><p>My hope is that you will follow along and reproduce the results on your own computer</p></li>
 <li class="fragment">
 <p>Let’s begin by opening the following link in Firefox:</p>
 <p><a href="https://JeffreyRacine.github.io/bk">JeffreyRacine.github.io/bk</a></p>
@@ -753,16 +753,16 @@ Figure&nbsp;3: Simulated data from <span class="math inline">\(N(0,1)\)</span> a
 <li class="fragment"><p>The classical case is when <span class="math inline">\(X\)</span> is continuous and <span class="math inline">\(Y\)</span> is continuous lying in <span class="math inline">\([-\infty,\infty]\)</span>, and we are interested in estimating <span class="math inline">\(f(y|x)\)</span></p></li>
 <li class="fragment"><p>The classical case replaces <span class="math inline">\(f(x,y)\)</span> and <span class="math inline">\(f(x)\)</span> with their kernel estimates and then divides the former by the latter keeping the same bandwidth <span class="math inline">\(h_x\)</span> for the numerator and denominator, which can also be derived as the solution to a local polynomial approximation problem</p></li>
 <li class="fragment"><p>The resulting kernel density estimator of the conditional PDF with <span class="math inline">\(Y\in\mathbb{R}^1\)</span> and <span class="math inline">\(X\in\mathbb{R}^1\)</span> is given by <span class="math display">\[\begin{equation*}
-\hat f(y|x) = \frac{\hat f(y,x)}{\hat f(x)}=\frac{\sum_{i=1}^nh_y^{-1}h_x^{-1}K\left(\frac{y-Y_i}{h_y}\right)K\left(\frac{x-X_i}{h_x}\right)}{\sum_{i=1}^nh_x^{-1}K\left(\frac{x-X_i}{h_x}\right)}.
+\hat f(y|x) = \frac{\hat f(y,x)}{\hat f(x)}=\frac{\sum_{i=1}^nh_y^{-1}h_x^{-1}K\left(\frac{y-Y_i}{h_y}\right)K\left(\frac{x-X_i}{h_x}\right)}{\sum_{i=1}^nh_x^{-1}K\left(\frac{x-X_i}{h_x}\right)}
 \end{equation*}\]</span></p></li>
 </ul></section><section id="local-polynomial-conditional-kde" class="slide level2 center"><h2>Local Polynomial Conditional KDE</h2>
 <ul>
 <li class="fragment"><p>This estimator is also the solution to a locally weighted least squares regression of <span class="math inline">\(h_y^{-1}K\left(\frac{y-Y_i}{h_y}\right)\)</span> on a constant <span class="math inline">\(\alpha\)</span> using local weights <span class="math inline">\(h_x^{-1}K\left(\frac{x-X_i}{h_x}\right)\)</span>, i.e., <span class="math display">\[\begin{equation*}
 \hat \alpha = \operatorname{argmin}_{\alpha}\sum_{i=1}^n\left(h_y^{-1}K\left(\frac{y-Y_i}{h_y}\right)-\alpha\right)^2h_x^{-1}K\left(\frac{x-X_i}{h_x}\right),
-\end{equation*}\]</span> which delivers <span class="math inline">\(\hat\alpha=\hat f(y|x)\)</span> identical to that from the previous approach.</p></li>
+\end{equation*}\]</span> which delivers <span class="math inline">\(\hat\alpha=\hat f(y|x)\)</span> identical to that from the previous approach</p></li>
 <li class="fragment"><p>The local polynomial extension of this estimator is given by <span class="math display">\[\begin{equation*}
 \hat \alpha = \operatorname{argmin}_{\alpha}\sum_{i=1}^n\left(h_y^{-1}K\left(\frac{y-Y_i}{h_y}\right)-\sum_{j=0}^p\alpha_j(x-X_i)^j\right)^2h_x^{-1}K\left(\frac{x-X_i}{h_x}\right),
-\end{equation*}\]</span> which delivers <span class="math inline">\(\hat\alpha_0=\hat f(y|x)\)</span>, a <span class="math inline">\(p\)</span>-th order local polynomial estimator.</p></li>
+\end{equation*}\]</span> which delivers <span class="math inline">\(\hat\alpha_0=\hat f(y|x)\)</span>, a <span class="math inline">\(p\)</span>-th order local polynomial estimator</p></li>
 </ul></section><section id="local-polynomial-conditional-kde-1" class="slide level2 center"><h2>Local Polynomial Conditional KDE</h2>
 <ul>
 <li class="fragment"><p>The local polynomial estimator is often adopted for its boundary properties with odd-order polynomials <span class="math inline">\(p\ge 1\)</span></p></li>
@@ -947,7 +947,7 @@ Figure&nbsp;6: Conditional KDE for <span class="math inline">\(\textrm{Beta}(1+x
 </div>
 </div>
 </div></section><section id="example---simultaneous-confidence-intervals" class="slide level2 center"><h2>Example - Simultaneous Confidence Intervals</h2>
-<p>Simultaneous or “uniform” confidence intervals present a multiple comparison problem, requiring both bias adjustment and solving a problem known not to be easy. The R package you are using can generate pointwise, simultaneous, and Bonferroni bounds that are theoretically supported and trivial to render, as the following example highlights (this may take a bit of time as there are a large number of bootstrap replications being drawn, <span class="math inline">\(B=3,999\)</span>).</p>
+<p>Simultaneous or “uniform” confidence intervals present a multiple comparison problem, requiring both bias adjustment and solving a problem known not to be easy. The R package you are using can generate pointwise, simultaneous, and Bonferroni bounds that are theoretically supported and trivial to render, as the following example highlights (this may take a bit of time as there are a large number of bootstrap replications being drawn, <span class="math inline">\(B=3,999\)</span>)</p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
@@ -1103,10 +1103,10 @@ Figure&nbsp;9: DGPs for the conditional density simulations (top Beta, bottom Ga
 
 </section><section id="candidate-model-comparison-beta-dgp" class="slide level2 center"><h2>Candidate Model Comparison: Beta DGP</h2>
 <ul>
-<li class="fragment"><p>We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).</p></li>
-<li class="fragment"><p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the PA method.</p></li>
+<li class="fragment"><p>We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA)</p></li>
+<li class="fragment"><p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the PA method</p></li>
 <li class="fragment">
-<p>If you knew <em>ex ante</em> which polynomial order to select, you would use that.</p>
+<p>If you knew <em>ex ante</em> which polynomial order to select, you would use that</p>
 <div class="panel-tabset">
 <ul id="tabset-1" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-1-1"><span class="math inline">\(B(1,2)\)</span> ML</a></li>
@@ -1388,10 +1388,10 @@ Table&nbsp;4: Relative RMSE Quadratic LS
 </li>
 </ul></section><section id="candidate-model-comparison-gaussian-dgp" class="slide level2 center"><h2>Candidate Model Comparison: Gaussian DGP</h2>
 <ul>
-<li class="fragment"><p>We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).</p></li>
-<li class="fragment"><p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the PA method.</p></li>
+<li class="fragment"><p>We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA)</p></li>
+<li class="fragment"><p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the PA method</p></li>
 <li class="fragment">
-<p>If you knew <em>ex ante</em> which polynomial order to select, you would use that.</p>
+<p>If you knew <em>ex ante</em> which polynomial order to select, you would use that</p>
 <div class="panel-tabset">
 <ul id="tabset-2" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-2-1"><span class="math inline">\(N(0,1/12)\)</span> ML</a></li>
@@ -1674,7 +1674,7 @@ Table&nbsp;8: Relative RMSE Quadratic LS
 </ul></section></section><section><section id="scale-factor-summaries" class="title-slide slide level1 center"><h1>Scale Factor Summaries</h1>
 
 </section><section id="scale-factor-summaries-beta-dgp" class="slide level2 center"><h2>Scale Factor Summaries: Beta DGP</h2>
-<p>The “scale factor” <span class="math inline">\(s\)</span> is an unknown constant that, adjusted for the sample size and data scale, related to the “bandwidth” <span class="math inline">\(h\)</span>, i.e., <span class="math inline">\(h_x=s_x\sigma_x/n^{1/6}\)</span> and <span class="math inline">\(h_y=s_y\sigma_y/n^{1/6}\)</span>, where <span class="math inline">\(n\)</span> is the sample size. The scale factor is estimated by optimizing the cross-validation score. The scale factor summaries below show the median scale factor for the three methods: BKPA, HRL, and FYT, and are presented for the irrelevant <span class="math inline">\(x\)</span> and quadratic <span class="math inline">\(x\)</span> DGPs.</p>
+<p>The “scale factor” <span class="math inline">\(s\)</span> is an unknown constant that, adjusted for the sample size and data scale, related to the “bandwidth” <span class="math inline">\(h\)</span>, i.e., <span class="math inline">\(h_x=s_x\sigma_x/n^{1/6}\)</span> and <span class="math inline">\(h_y=s_y\sigma_y/n^{1/6}\)</span>, where <span class="math inline">\(n\)</span> is the sample size. The scale factor is estimated by optimizing the cross-validation score. The scale factor summaries below show the median scale factor for the three methods: BKPA, HRL, and FYT, and are presented for the irrelevant <span class="math inline">\(x\)</span> and quadratic <span class="math inline">\(x\)</span> DGPs</p>
 <div class="panel-tabset">
 <ul id="tabset-3" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-3-1"><span class="math inline">\(B(1,2)\)</span> ML</a></li>
@@ -2026,7 +2026,7 @@ FYT
 </div>
 </div>
 </section><section id="scale-factor-summaries-gaussian-dgp" class="slide level2 center"><h2>Scale Factor Summaries: Gaussian DGP</h2>
-<p>The “scale factor” <span class="math inline">\(s\)</span> is an unknown constant that, adjusted for the sample size and data scale, related to the “bandwidth” <span class="math inline">\(h\)</span>, i.e., <span class="math inline">\(h_x=s_x\sigma_x/n^{1/6}\)</span> and <span class="math inline">\(h_y=s_y\sigma_y/n^{1/6}\)</span>, where <span class="math inline">\(n\)</span> is the sample size. The scale factor is estimated by optimizing the cross-validation score. The scale factor summaries below show the median scale factor for the three methods: BKPA, HRL, and FYT, and are presented for the irrelevant <span class="math inline">\(x\)</span> and quadratic <span class="math inline">\(x\)</span> DGPs.</p>
+<p>The “scale factor” <span class="math inline">\(s\)</span> is an unknown constant that, adjusted for the sample size and data scale, related to the “bandwidth” <span class="math inline">\(h\)</span>, i.e., <span class="math inline">\(h_x=s_x\sigma_x/n^{1/6}\)</span> and <span class="math inline">\(h_y=s_y\sigma_y/n^{1/6}\)</span>, where <span class="math inline">\(n\)</span> is the sample size. The scale factor is estimated by optimizing the cross-validation score. The scale factor summaries below show the median scale factor for the three methods: BKPA, HRL, and FYT, and are presented for the irrelevant <span class="math inline">\(x\)</span> and quadratic <span class="math inline">\(x\)</span> DGPs</p>
 <div class="panel-tabset">
 <ul id="tabset-4" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-4-1"><span class="math inline">\(N(0,1/12)\)</span> ML</a></li>
@@ -2381,9 +2381,9 @@ FYT
 
 </section><section id="comparison-with-hrl-and-fyt-beta-dgp" class="slide level2 center"><h2>Comparison with HRL and FYT: Beta DGP</h2>
 <ul>
-<li class="fragment"><p>We compare the performance of the proposed method using empirical bounds with the methods of <span class="citation" data-cites="HALL_RACINE_LI:2004">Hall, Racine, and Li (<a href="#/references-scrollable" role="doc-biblioref" onclick="">2004</a>)</span> and <span class="citation" data-cites="fyt:1996">Fan, Yao, and Tong (<a href="#/references-scrollable" role="doc-biblioref" onclick="">1996</a>)</span>, which use a classical kernel presuming infinite support (inappropriate for the Beta).</p></li>
+<li class="fragment"><p>We compare the performance of the proposed method using empirical bounds with the methods of <span class="citation" data-cites="HALL_RACINE_LI:2004">Hall, Racine, and Li (<a href="#/references-scrollable" role="doc-biblioref" onclick="">2004</a>)</span> and <span class="citation" data-cites="fyt:1996">Fan, Yao, and Tong (<a href="#/references-scrollable" role="doc-biblioref" onclick="">1996</a>)</span>, which use a classical kernel presuming infinite support (inappropriate for the Beta)</p></li>
 <li class="fragment">
-<p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the BKPA method.</p>
+<p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the BKPA method</p>
 <div class="panel-tabset">
 <ul id="tabset-5" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-5-1"><span class="math inline">\(B(1,2)\)</span> ML</a></li>
@@ -2585,9 +2585,9 @@ Table&nbsp;20: Median Relative RMSE Quadratic LS
 </li>
 </ul></section><section id="comparison-with-hrl-and-fyt-gaussian-dgp" class="slide level2 center"><h2>Comparison with HRL and FYT: Gaussian DGP</h2>
 <ul>
-<li class="fragment"><p>We compare the performance of the proposed method using empirical bounds with the methods of <span class="citation" data-cites="HALL_RACINE_LI:2004">Hall, Racine, and Li (<a href="#/references-scrollable" role="doc-biblioref" onclick="">2004</a>)</span> and <span class="citation" data-cites="fyt:1996">Fan, Yao, and Tong (<a href="#/references-scrollable" role="doc-biblioref" onclick="">1996</a>)</span>, which use a classical kernel presuming infinite support (appropriate for the Gaussian).</p></li>
+<li class="fragment"><p>We compare the performance of the proposed method using empirical bounds with the methods of <span class="citation" data-cites="HALL_RACINE_LI:2004">Hall, Racine, and Li (<a href="#/references-scrollable" role="doc-biblioref" onclick="">2004</a>)</span> and <span class="citation" data-cites="fyt:1996">Fan, Yao, and Tong (<a href="#/references-scrollable" role="doc-biblioref" onclick="">1996</a>)</span>, which use a classical kernel presuming infinite support (appropriate for the Gaussian)</p></li>
 <li class="fragment">
-<p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the BKPA method.</p>
+<p>Numbers <span class="math inline">\(&lt;1\)</span> are more efficient than the BKPA method</p>
 <div class="panel-tabset">
 <ul id="tabset-6" class="panel-tabset-tabby">
 <li><a data-tabby-default="" href="#tabset-6-1"><span class="math inline">\(N(0,1/12)\)</span> ML</a></li>
