--- a/index-speaker.html
+++ b/index-speaker.html
@@ -453,7 +453,7 @@ Qi Li<sup>3</sup>
 </div>
 
   <p class="date">Updated February 19, 2025</p>
-</section><section class="slide level2 center"><p>f# Slide Pro-Tips</p>
+</section><section><section id="slide-pro-tips" class="title-slide slide level1 center"><h1>Slide Pro-Tips</h1>
 <div>
 <ul>
 <li><p>View <strong>full screen</strong> in A2L by clicking on the slide and then pressing the F key (press the Esc key to revert)</p></li>
@@ -493,7 +493,7 @@ Qi Li<sup>3</sup>
 <p>An R package is available at:</p>
 <p><a href="https://github.com/JeffreyRacine/bkcde">github.com/JeffreyRacine/bkcde</a></p>
 </li>
-</ul></section><section><section id="unconditional-density-estimation-with-bounded-data" class="title-slide slide level1 center"><h1>Unconditional Density Estimation with Bounded Data</h1>
+</ul></section></section><section><section id="unconditional-density-estimation-with-bounded-data" class="title-slide slide level1 center"><h1>Unconditional Density Estimation with Bounded Data</h1>
 
 </section><section id="kde-with-bounded-data" class="slide level2 center"><h2>KDE with Bounded Data</h2>
 <ul>
